--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "calculator1": {
+    "calculator": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/calculator1",
+            "outputPath": "dist/calculator",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "calculator1:build"
+            "browserTarget": "calculator:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "calculator1:build:production"
+              "browserTarget": "calculator:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "calculator1:build"
+            "browserTarget": "calculator:build"
           }
         },
         "test": {
@@ -117,16 +117,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "calculator1:serve"
+            "devServerTarget": "calculator:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "calculator1:serve:production"
+              "devServerTarget": "calculator:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "calculator1"
+  "defaultProject": "calculator"
 }
